--- a/styles/style.css
+++ b/styles/style.css
@@ -91,7 +91,7 @@ body {
   flex-direction: column;
   align-items: center;
   margin: 20vh 5vw 0vh;
-  font-family: Georgia, serif;
+  font-family: "Virgil";
 }
 #welcome h1, #welcome h2 {
   margin: 0.25em;
