--- a/styles/style.scss
+++ b/styles/style.scss
@@ -106,7 +106,7 @@ body {
     flex-direction: column;
     align-items: center;
     margin: 20vh 5vw 0vh;
-    font-family:Georgia, serif;
+    font-family: "Virgil";
 
     h1,h2{
         margin: $qem;
