--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,17 +7,6 @@ body {
 
 #canvas {
     min-height: 100vh;
-    position: relative;
-    /* Position relative inorder to create a stacking context */
-}
-
-
-/* 
-    ::before and ::after -> The default display value for these pseudo-elements is inline.
-    That's why when you specify height and width it will have no effect 
-*/
-#canvas::before {
-    content: "";
     position: absolute;
     top: 0;
     left: 0;
@@ -28,8 +17,6 @@ body {
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    //filter: blur($qem);
-    
 }
 
 #navbar {
@@ -98,15 +85,14 @@ body {
     }
 }
 
-
-
 #welcome{
     //border:1px solid black;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 20vh 5vw 0vh;
-    font-family: "Virgil";
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 
     h1,h2{
         margin: $qem;
@@ -233,7 +219,6 @@ body {
 
 }
 
-
 @media (max-width:484px){
     #container{
         #sub-info{
@@ -247,9 +232,7 @@ body {
                 height: 10em;
                 width: 23em;
             }
-    
         }
-        
     }
 }
 
