--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,16 @@ body {
 
 #canvas {
   min-height: 100vh;
+  position: relative;
+  /* Position relative inorder to create a stacking context */
+}
+
+/* 
+    ::before and ::after -> The default display value for these pseudo-elements is inline.
+    That's why when you specify height and width it will have no effect 
+*/
+#canvas::before {
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -81,7 +91,7 @@ body {
   flex-direction: column;
   align-items: center;
   margin: 20vh 5vw 0vh;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Virgil";
 }
 #welcome h1, #welcome h2 {
   margin: 0.25em;
