--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,6 +7,17 @@ body {
 
 #canvas {
     min-height: 100vh;
+    position: relative;
+    /* Position relative inorder to create a stacking context */
+}
+
+
+/* 
+    ::before and ::after -> The default display value for these pseudo-elements is inline.
+    That's why when you specify height and width it will have no effect 
+*/
+#canvas::before {
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
@@ -17,6 +28,8 @@ body {
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
+    //filter: blur($qem);
+    
 }
 
 #navbar {
@@ -85,14 +98,15 @@ body {
     }
 }
 
+
+
 #welcome{
     //border:1px solid black;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 20vh 5vw 0vh;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    font-family: "Virgil";
 
     h1,h2{
         margin: $qem;
@@ -219,6 +233,7 @@ body {
 
 }
 
+
 @media (max-width:484px){
     #container{
         #sub-info{
@@ -232,7 +247,9 @@ body {
                 height: 10em;
                 width: 23em;
             }
+    
         }
+        
     }
 }
 
