--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ body {
   width: 100%;
   height: 100%;
   z-index: -1;
-  background-image: url("../utils/weather.jpg");
+  background-image: url("../utils/weather1.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -41,7 +41,7 @@ body {
   position: sticky;
   top: 0;
   z-index: 1;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "EB Garamond";
 }
 #navbar #navlogo {
   height: 2.5em;
@@ -87,7 +87,7 @@ body {
 }
 
 #container {
-  border: 1px solid black;
+  border: 0.2px solid black;
 }
 
 #welcome {
@@ -95,41 +95,41 @@ body {
   flex-direction: column;
   align-items: center;
   margin: 20vh 5vw 0vh;
-  font-family: "Virgil";
+  font-family: "EB Garamond";
 }
-#welcome h1, #welcome h2 {
+#welcome h1,
+#welcome h2 {
   margin: 0.25em;
   text-align: center;
-  text-shadow: 1px 1px 5px rgba(238, 72, 72, 0.873);
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.873);
 }
 #welcome h1 {
-  font-size: 50px;
-  color: rgb(244, 226, 212);
+  margin-top: 1em;
+  font-size: 8vh;
+  color: rgb(255, 255, 255);
 }
 #welcome h2 {
-  font-size: 35px;
+  font-size: 5vh;
   color: rgb(255, 149, 2);
 }
 
 #tempInfo {
-  margin: 6em 1em 1em;
   color: rgb(0, 0, 0);
   text-align: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "EB Garamond";
   font-size: large;
-  background-image: linear-gradient(rgba(49, 79, 112, 0.877), lightslategray);
-  min-width: 35vw;
+  margin: 5em 1em;
+  background-image: linear-gradient(rgba(70, 103, 138, 0.88), lightslategray);
+  min-width: 30vw;
   border-radius: 0.25em;
   opacity: 0.8;
-  box-shadow: 4px 4px 10px 1px rgb(35, 35, 35);
+  box-shadow: rgb(35, 35, 35) 4px 4px 10px 1px;
 }
 #tempInfo #temp {
   display: flex;
   justify-content: center;
   align-items: center;
-  -moz-column-gap: 2em;
-       column-gap: 2em;
-  height: 20vh;
+  height: 16vh;
 }
 #tempInfo #temp #logo {
   height: 4.5em;
@@ -154,7 +154,7 @@ body {
   color: rgba(255, 255, 255, 0.897);
 }
 #tempInfo p {
-  font-weight: bold;
+  font-weight: bolder;
   font-size: 1em;
   margin: 0em 0em 0em;
 }
@@ -163,9 +163,11 @@ body {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  background-image: linear-gradient(rgb(155, 118, 59), rgb(108, 107, 73));
+  background-image: linear-gradient(rgba(122, 120, 120, 0.863), rgb(124, 124, 124));
   filter: opacity(0.8);
-  margin: 7.5em 1em 3em;
+  margin: 8em 1em;
+  min-height: 50vh;
+  padding: 1em;
   border-radius: 0.5em;
   box-shadow: 4px 4px 10px 1px rgb(35, 35, 35);
 }
@@ -177,20 +179,22 @@ body {
 #sub-info #sub-info-6,
 #sub-info #sub-info-7 {
   text-wrap: wrap;
-  height: 10em;
-  min-width: 10em;
-  margin: 2em;
-  color: rgb(0, 0, 0);
+  height: 8em;
+  min-width: 9em;
+  margin: 1em;
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  padding: 1px;
+  font-family: "EB Garamond";
+  padding: 1em;
   color: cornsilk;
-  box-shadow: 2px 2px 4px 0px rgb(35, 35, 35);
+  border-radius: 0.5em;
+  box-shadow: 3px 3px 5px 0px rgb(35, 35, 35);
+  background-color: rgba(84, 87, 90, 0.859);
 }
-#sub-info #sub-info-1 h1, #sub-info #sub-info-1 h4,
+#sub-info #sub-info-1 h1,
+#sub-info #sub-info-1 h4,
 #sub-info #sub-info-2 h1,
 #sub-info #sub-info-2 h4,
 #sub-info #sub-info-3 h1,
@@ -244,7 +248,7 @@ body {
     width: 23em;
   }
 }
-@media (min-width: 1100px) {
+@media (min-width: 1333px) {
   #container {
     display: flex;
   }
@@ -252,6 +256,9 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 6em 1em 2em;
+    margin: 8em 1em;
+  }
+  #container #sub-info {
+    margin: 10em 1em;
   }
 }/*# sourceMappingURL=style.css.map */
