--- a/styles/style.scss
+++ b/styles/style.scss
@@ -248,6 +248,9 @@ body {
 
 
 @media (max-width:484px) {
+    #welcome{
+        margin: 8vh 5vw 0vh;
+    }
     #container {
         #sub-info {
 
