scroll added to subinfos

--- a/styles/style.css
+++ b/styles/style.css
@@ -118,11 +118,10 @@ body {
   text-align: center;
   font-family: "EB Garamond";
   font-size: large;
-  margin: 5em 1em;
   background-image: linear-gradient(rgba(70, 103, 138, 0.88), lightslategray);
   min-width: 30vw;
   border-radius: 0.25em;
-  opacity: 0.8;
+  opacity: 0.9;
   box-shadow: rgb(35, 35, 35) 4px 4px 10px 1px;
 }
 #tempInfo #temp {
@@ -163,13 +162,13 @@ body {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  background-image: linear-gradient(rgba(122, 120, 120, 0.863), rgb(124, 124, 124));
-  filter: opacity(0.8);
+  background-image: linear-gradient(rgba(105, 101, 101, 0.863), rgb(112, 109, 109));
+  filter: opacity(0.9);
   margin: 8em 1em;
   min-height: 50vh;
   padding: 1em;
   border-radius: 0.5em;
-  box-shadow: 4px 4px 10px 1px rgb(35, 35, 35);
+  box-shadow: 4px 4px 10px 1px rgb(36, 36, 36);
 }
 #sub-info #sub-info-1,
 #sub-info #sub-info-2,
@@ -178,7 +177,6 @@ body {
 #sub-info #sub-info-5,
 #sub-info #sub-info-6,
 #sub-info #sub-info-7 {
-  text-wrap: wrap;
   height: 8em;
   min-width: 9em;
   margin: 1em;
@@ -240,16 +238,6 @@ body {
   #welcome {
     margin: 8vh 5vw 0vh;
   }
-  #container #sub-info #sub-info-1,
-  #container #sub-info #sub-info-2,
-  #container #sub-info #sub-info-3,
-  #container #sub-info #sub-info-4,
-  #container #sub-info #sub-info-5,
-  #container #sub-info #sub-info-6,
-  #container #sub-info #sub-info-7 {
-    height: 10em;
-    width: 23em;
-  }
 }
 @media (min-width: 1333px) {
   #container {
@@ -263,5 +251,21 @@ body {
   }
   #container #sub-info {
     margin: 10em 1em;
+  }
+}
+@media (max-width: 1333px) {
+  #tempInfo {
+    margin: 5em auto;
+    max-width: 19em;
+  }
+  #sub-info {
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    overflow-x: auto;
+    min-height: 25vh;
+    margin: 5em 1em;
+  }
+  #sub-info #sub-info-7 {
+    overflow: auto;
   }
 }/*# sourceMappingURL=style.css.map */
